Fix directions gradient and section spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -2917,6 +2917,48 @@ h3,
 	}
 }
 
+@media (max-width: 430px) {
+	.directions-section {
+		height: calc(1776.75px + 317.5vw + var(--expanded-image-scroll-extra));
+	}
+}
+
+@media (min-width: 431px) and (max-width: 639px) {
+	.directions-section {
+		height: calc(2607px + 124.4vw + var(--expanded-image-scroll-extra));
+	}
+}
+
+@media (min-width: 640px) and (max-width: 719px) {
+	.directions-section {
+		height: calc(3434px + var(--expanded-image-scroll-extra));
+	}
+}
+
+@media (min-width: 720px) and (max-width: 767px) {
+	.directions-section {
+		height: calc(2479px + var(--expanded-image-scroll-extra));
+	}
+}
+
+@media (min-width: 768px) and (max-width: 899px) {
+	.directions-section {
+		height: calc(3617px - 105.4vw + var(--expanded-image-scroll-extra));
+	}
+}
+
+@media (min-width: 900px) and (max-width: 1199px) {
+	.directions-section {
+		height: calc(2768px + var(--expanded-image-scroll-extra));
+	}
+}
+
+@media (min-width: 1200px) and (max-width: 1369px) {
+	.directions-section {
+		height: calc(3796px + var(--expanded-image-scroll-extra) - 840px);
+	}
+}
+
 @media (min-width: 720px) and (max-width: 959px) {
 	.solution-media-slot {
 		width: min(84vw, 694px);
